
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed_net_liquidity"
version = "0.0.2"
authors = [
  { name="Eduardo Cavazos", email="wayo.cavazos@gmail.com" },
]
description = "Library for calculating Fed Net Liquidity"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "pandas",
    "fred_pandas",
    "treasury_gov_pandas",
    "newyorkfed_pandas"
]

[project.urls]
Homepage = "https://github.com/dharmatech/fed_net_liquidity.py"
Issues   = "https://github.com/dharmatech/fed_net_liquidity.py/issues"